fixed the weird columns gap

--- a/assets/style.css
+++ b/assets/style.css
@@ -58,11 +58,18 @@ h1{
 	
 	#channel-blocks{
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(3, 300px);
 		padding-top: 10px;
 		padding-bottom: 20px;
-		gap: 10px;
+		gap: 0;
 
+	/* #channel-blocks li{
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	} */
+
+	
 
 	}
 	
